improve dockerfile